// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should add step to step list and render to screen when added from StepForm 1`] = `
<div>
  <div>
    <button
      id="saveInterval"
    >
      Save
    </button>
    <label
      for="intervalName"
    >
      Name
    </label>
    <input
      id="intervalName"
      placeholder="name"
      type="text"
      value=""
    />
    <div>
      <p>
        Type: 
        Activity
      </p>
      <p>
        Name: 
        Squats
      </p>
      <p>
        Duration: 
        30
      </p>
      <button
        value="0"
      >
        Remove
      </button>
    </div>
    <div>
      <form>
        <label
          for="stepType"
        >
          Step Type
        </label>
        <select
          id="stepType"
        >
          <option
            value="Activity"
          >
            Activity
          </option>
          <option
            value="Rest"
          >
            Rest
          </option>
        </select>
        <label
          for="stepName"
        >
          Step Name
        </label>
        <input
          id="stepName"
          placeholder="Step name"
          type="text"
          value="Squats"
        />
        <label
          for="stepDuration"
        >
          Step Duration
        </label>
        <input
          id="stepDuration"
          placeholder="Duration (seconds)"
          step="1"
          type="number"
          value="30"
        />
        <button>
          Add Step
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`should remove step when pressed 1`] = `
<div>
  <div>
    <button
      id="saveInterval"
    >
      Save
    </button>
    <label
      for="intervalName"
    >
      Name
    </label>
    <input
      id="intervalName"
      placeholder="name"
      type="text"
      value="fitness workout 1"
    />
    <div>
      <p>
        Type: 
        Activity
      </p>
      <p>
        Name: 
        press-ups
      </p>
      <p>
        Duration: 
        20
      </p>
      <button
        value="0"
      >
        Remove
      </button>
    </div>
    <div>
      <p>
        Type: 
        Rest
      </p>
      <p>
        Name: 
        Rest
      </p>
      <p>
        Duration: 
        10
      </p>
      <button
        value="1"
      >
        Remove
      </button>
    </div>
    <div>
      <p>
        Type: 
        Rest
      </p>
      <p>
        Name: 
        Rest
      </p>
      <p>
        Duration: 
        10
      </p>
      <button
        value="2"
      >
        Remove
      </button>
    </div>
    <div>
      <form>
        <label
          for="stepType"
        >
          Step Type
        </label>
        <select
          id="stepType"
        >
          <option
            value="Activity"
          >
            Activity
          </option>
          <option
            value="Rest"
          >
            Rest
          </option>
        </select>
        <label
          for="stepName"
        >
          Step Name
        </label>
        <input
          id="stepName"
          placeholder="Step name"
          type="text"
          value=""
        />
        <label
          for="stepDuration"
        >
          Step Duration
        </label>
        <input
          id="stepDuration"
          placeholder="Duration (seconds)"
          step="1"
          type="number"
          value="0"
        />
        <button>
          Add Step
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`should render empty IntervalForm correctly 1`] = `
<div>
  <div>
    <button
      id="saveInterval"
    >
      Save
    </button>
    <label
      for="intervalName"
    >
      Name
    </label>
    <input
      id="intervalName"
      placeholder="name"
      type="text"
      value=""
    />
    <div>
      <form>
        <label
          for="stepType"
        >
          Step Type
        </label>
        <select
          id="stepType"
        >
          <option
            value="Activity"
          >
            Activity
          </option>
          <option
            value="Rest"
          >
            Rest
          </option>
        </select>
        <label
          for="stepName"
        >
          Step Name
        </label>
        <input
          id="stepName"
          placeholder="Step name"
          type="text"
          value=""
        />
        <label
          for="stepDuration"
        >
          Step Duration
        </label>
        <input
          id="stepDuration"
          placeholder="Duration (seconds)"
          step="1"
          type="number"
          value="0"
        />
        <button>
          Add Step
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`should render pre-filled IntervalForm when sending interval data 1`] = `
<div>
  <div>
    <button
      id="saveInterval"
    >
      Save
    </button>
    <label
      for="intervalName"
    >
      Name
    </label>
    <input
      id="intervalName"
      placeholder="name"
      type="text"
      value="meditation focus"
    />
    <div>
      <p>
        Type: 
        Activity
      </p>
      <p>
        Name: 
        focus
      </p>
      <p>
        Duration: 
        30
      </p>
      <button
        value="0"
      >
        Remove
      </button>
    </div>
    <div>
      <p>
        Type: 
        Rest
      </p>
      <p>
        Name: 
        Rest
      </p>
      <p>
        Duration: 
        15
      </p>
      <button
        value="1"
      >
        Remove
      </button>
    </div>
    <div>
      <p>
        Type: 
        Activity
      </p>
      <p>
        Name: 
        focus
      </p>
      <p>
        Duration: 
        30
      </p>
      <button
        value="2"
      >
        Remove
      </button>
    </div>
    <div>
      <p>
        Type: 
        Rest
      </p>
      <p>
        Name: 
        Rest
      </p>
      <p>
        Duration: 
        15
      </p>
      <button
        value="3"
      >
        Remove
      </button>
    </div>
    <div>
      <form>
        <label
          for="stepType"
        >
          Step Type
        </label>
        <select
          id="stepType"
        >
          <option
            value="Activity"
          >
            Activity
          </option>
          <option
            value="Rest"
          >
            Rest
          </option>
        </select>
        <label
          for="stepName"
        >
          Step Name
        </label>
        <input
          id="stepName"
          placeholder="Step name"
          type="text"
          value=""
        />
        <label
          for="stepDuration"
        >
          Step Duration
        </label>
        <input
          id="stepDuration"
          placeholder="Duration (seconds)"
          step="1"
          type="number"
          value="0"
        />
        <button>
          Add Step
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`should show an error when saving without enough data 1`] = `
<div>
  <div>
    <button
      id="saveInterval"
    >
      Save
    </button>
    <p>
      Please provide a routine name and interval steps.
    </p>
    <label
      for="intervalName"
    >
      Name
    </label>
    <input
      id="intervalName"
      placeholder="name"
      type="text"
      value=""
    />
    <div>
      <form>
        <label
          for="stepType"
        >
          Step Type
        </label>
        <select
          id="stepType"
        >
          <option
            value="Activity"
          >
            Activity
          </option>
          <option
            value="Rest"
          >
            Rest
          </option>
        </select>
        <label
          for="stepName"
        >
          Step Name
        </label>
        <input
          id="stepName"
          placeholder="Step name"
          type="text"
          value=""
        />
        <label
          for="stepDuration"
        >
          Step Duration
        </label>
        <input
          id="stepDuration"
          placeholder="Duration (seconds)"
          step="1"
          type="number"
          value="0"
        />
        <button>
          Add Step
        </button>
      </form>
    </div>
  </div>
</div>
`;
